--- a/index.html
+++ b/index.html
@@ -1,12 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Alon Brecher - Computer Engineer</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Alon Brecher – Portfolio</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0 20px; background-color: #f7f7f7; color: #222; }
+    h1, h2 { color: #0a0a0a; }
+    nav { background-color: #333; padding: 10px; text-align: center; }
+    nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
+    section { padding: 40px 0; border-bottom: 1px solid #ccc; }
+    .project { margin-bottom: 20px; }
+    footer { text-align: center; padding: 20px; font-size: 14px; }
+  </style>
 </head>
 <body>
-  <h1>Welcome to My Portfolio</h1>
-  <p>I'm a final-year Computer Engineering student at Ben-Gurion University, specializing in software development, hardware design, and embedded systems.</p>
-  <p>Check out my projects below!</p>
+
+  <!-- Navigation -->
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <!-- Home Section -->
+  <section id="home">
+    <h1>Alon Brecher</h1>
+    <p>Final-year Computer Engineering student at Ben-Gurion University.<br>
+    Passionate about software development, embedded systems, chip design, and machine learning.</p>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects">
+    <h2>Projects</h2>
+
+    <div class="project">
+      <h3>Engineering Project: Tumor Segmentation with DOT and Neural Networks</h3>
+      <p>Developed a system for breast cancer detection using Diffuse Optical Tomography and 3D neural networks (PyTorch).</p>
+      <p><strong>Tech:</strong> Python, MATLAB, PyTorch, Medical Imaging, GPU Acceleration</p>
+      <p><a href="https://github.com/yourusername/DOTNet-HybridSeg3D" target="_blank">GitHub Repo</a></p>
+    </div>
+
+    <div class="project">
+      <h3>CPU Architecture Project</h3>
+      <p>Designed a simplified CPU pipeline architecture with instruction decoding and hazard handling.</p>
+      <p><strong>Tech:</strong> SystemVerilog, Digital Design, FSM, RTL</p>
+    </div>
+
+    <div class="project">
+      <h3>Operating System Simulator</h3>
+      <p>Simulated core OS components: scheduling, memory management, and multithreading.</p>
+      <p><strong>Tech:</strong> C, POSIX Threads, File Systems</p>
+    </div>
+
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:alon3898@gmail.com">alon3898@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/alon-brecher" target="_blank">linkedin.com/in/alon-brecher</a></p>
+    <p>GitHub: <a href="https://github.com/alon-brecher" target="_blank">github.com/alon-brecher</a></p>
+  </section>
+
+  <footer>
+    © 2025 Alon Brecher
+  </footer>
+
 </body>
 </html>
